--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Mirror to AR2001
 on:
   push:
     branches:
-      - main  # or whatever your main branch is
+      - main  # or whatever your main branch
 
 jobs:
   mirror:
