--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # .github/workflows/mirror.yml
-name: Mirror to AR2001
+name: Mirror to AKHILESHRAVURI2001_BACKUP_TOOLS
 
 on:
   push:
@@ -17,5 +17,5 @@ jobs:
 
       - name: Push to AR2001 repo
         run: |
-          git remote add mirror https://AKHILESHRAVURI2001:${{ secrets.Akhileshravuri2001_token_unexpiry }}@github.com/AKHILESHRAVURI2001/AR01H_tools_backup.git
+          git remote add mirror https://AKHILESHRAVURI2001:${{ secrets.AKHILESHRAVURI2001_BACKUP_TOOLS_MIRROR_TOKEN }}@github.com/AKHILESHRAVURI2001/AR01H_tools_backup.git
           git push mirror main --force
